Update career highlights and add closing tag

--- a/bio.html
+++ b/bio.html
@@ -598,6 +598,7 @@
             
             <div class="highlight-box">
                 <h3>Career Highlights</h3>
+                <p><strong>U.S. House Committee on Science, Space & Technology:</strong> February 7, 2018 - Testimony of John L. Sands, Professor at Moraine Valley Community College and Principal Investigator/Director of the Center for Systems Security and Information Assurance (CSSIA) an NSF/ATE Center.</p>
                 <p><strong>Federal Funding Excellence:</strong> Dr. Sands has demonstrated exceptional capability in securing federal funding, obtaining over $37 million from prestigious organizations including NSF, NSA, NIST, and the Department of Labor.</p>
                 <p><strong>Academic Leadership:</strong> Professor and Department Chair of Computer Integrated Technologies at Moraine Valley Community College, serving for over 37 years and building one of the nation's most respected cybersecurity programs.</p>
                 <p><strong>National Recognition:</strong> Recognized as a national leader in cybersecurity education and the implications of artificial intelligence (AI), influencing educational standards and practices across the US.</p>
